@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-06T01:48:41Z",
+  "timestamp" : "2022-10-12T08:26:50Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 1,
-  "uniques" : 1,
+  "count" : 3,
+  "uniques" : 3,
   "clones" : [
     {
       "timestamp": "2022-10-03T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
